--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,24 @@
+@import url("https://fonts.googleapis.com/css2?family=Rubik+Pixels&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Tenor+Sans&display=swap");
+
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+* {
+  font-family: "Tenor Sans", sans-serif;
+}
+
+/* HEADER */
+.title {
+  font-family: "Rubik Pixels", cursive;
+}
+
+/* HOME */
+.default-btn {
+  font-family: "Rubik Pixels", cursive;
+}
+
+.title-2 {
+  font-family: "Rubik Pixels", cursive;
+}
