--- a/src/index.css
+++ b/src/index.css
@@ -9,16 +9,6 @@
   font-family: "Tenor Sans", sans-serif;
 }
 
-/* HEADER */
-.title {
-  font-family: "Rubik Pixels", cursive;
-}
-
-/* HOME */
-.default-btn {
-  font-family: "Rubik Pixels", cursive;
-}
-
-.title-2 {
+.font-rubik {
   font-family: "Rubik Pixels", cursive;
 }
